--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
       <div class="assignment">
         <a href="a2.html">
           <h2>Scuba Diving!</h2>
-          <img src="scuba-diving.JPG" />
+          <img src="scuba-diving.jpg" />
         </a>
         <p>Scuba diving in the Great Barrier Reef!</p>
       </div>
