--- a/index.html
+++ b/index.html
@@ -24,15 +24,15 @@
     <div class="grid">
       <div class="assignment">
         <a href="a1.html">
-          <h2>Skydiving!</h2>
-          <img src="skydiving.JPG" />
+          <h2>Assignment 1: Blink!</h2>
+          <img src="blink-photo.jpeg" />
         </a>
-        <p>Skydiving in New Zealand!</p>
+        <p>Assignment 1 was Blink!</p>
       </div>
 
       <div class="assignment">
         <a href="a2.html">
-          <h2>Scuba Diving!</h2>
+          <h2>Assignment 2: Fade!!</h2>
           <img src="scuba-diving.jpg" />
         </a>
         <p>Scuba diving in the Great Barrier Reef!</p>
