--- a/index.html
+++ b/index.html
@@ -32,18 +32,18 @@
 
       <div class="assignment">
         <a href="a2.html">
-          <h2>Assignment 2: Fade!!</h2>
-          <img src="scuba-diving.jpg" />
+          <h2>Assignment 2: Fade!</h2>
+          <img src="red-panda.jpg" />
         </a>
-        <p>Scuba diving in the Great Barrier Reef!</p>
+        <p>Assignment 2 was Fade!</p>
       </div>
 
       <div class="assignment">
         <a href="a2.html">
-          <h2>Sand Dune Surfing !</h2>
-          <img src="sand-dunes.JPG" />
+          <h2>Assignment 2: Fade!</h2>
+          <img src="red-panda.jpg" />
         </a>
-        <p>Sand Dune Surfing in Australia!</p>
+        <p>Assignment 2 was a panda!</p>
       </div>
     </div>
   </body>
