--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <div class="header">
       <img src="emi-photo.jpeg" />
       <p>
-        My name is Emi Nakata! I'm an HCDE major, originally from Seattle.
+        My name is Emi Nakata! i changed something! I'm an HCDE major, originally from Seattle.
         I love dance and music, and currently coach a high school dance team.
         I also enjoy traveling and exploring new places, and I'm always excited for a new adventure!
         In this course, I'm ready to challenge myself and do some hands on work with physical computing.
