--- a/a2.html
+++ b/a2.html
@@ -156,10 +156,10 @@
 
       <h2>My Circuit's Operation</h2>
       <video controls width="600" height="450">
-        <source src="blink-video.mp4" type="video/mp4">
+        <source src="fade-video.mp4" type="video/mp4">
       Your browser does not support the video tag.
       </video>
-      Video of my circuit in operation, with all three LEDs blinking- yellow, green, and red.
+      Video of my circuit in operation, with a fading RGB LED, red LED, and push button.
       <br>
       <br>
 
