add my circuit photo

--- a/a2.html
+++ b/a2.html
@@ -34,8 +34,8 @@
       <br>
 
       <h2>My Circuit</h2>
-      <img src="blink-photo.jpeg" width="500" height="450"/>
-      Image of my physical circuit, "Blink", with all components connected.
+      <img src="fade-circuit.jpg" width="500" height="450"/>
+      Image of my physical circuit, "Fade", with all components connected.
       <br>
       <br>
 
