--- a/a2.html
+++ b/a2.html
@@ -151,7 +151,7 @@
         <source src="fade-video.mp4" type="video/mp4">
       Your browser does not support the video tag.
       </video>
-      Video of my circuit in operation, with a fading RGB LED, red LED, and push button.
+      Video of my circuit in operation, with a fading RGB LED, red LED, and pushbutton.
       <br>
       <br>
 
@@ -163,14 +163,20 @@
         <br>
         
         <br>
-        <img src="graph.png" width="700" height="450"/>
+        <img src="fade-q1.png" width="700" height="450"/>
         <br>
         <br>
         2: Given your schematic, circuit, and firmware, 
         assuming the only thing that draws current is your LEDs, 
         how long would your circuit run if powered by a 1200 mAh battery?
         <br>
-        Answer
+        If powered by a 1200 mAh battery, my circuit would run for approximately 30 hours if the pushbutton is constantly pressed.
+        My circuit is using two LEDs: a single red LED, using 20 mA of current, and an RGB LED, using an average of 20 mA of current, 
+        for a total of 40 mA of current.
+
+        Therefore, the battery life can be calculated as follows:
+        <img src="fade-q2.png" width="700" height="450"/>
+
         <br>
         <br>
         3: Measure and record the actual voltage across one of your LEDs when it's on. 
