--- a/a2.html
+++ b/a2.html
@@ -163,17 +163,18 @@
         <br>
         
         <br>
-        <img src="fade-q1.png" width="700" height="450"/>
+        <img src="fade-q1.jpg" width="700" height="450"/>
         <br>
         <br>
         2: Given your schematic, circuit, and firmware, 
         assuming the only thing that draws current is your LEDs, 
         how long would your circuit run if powered by a 1200 mAh battery?
         <br>
+        <br>
         If powered by a 1200 mAh battery, my circuit would run for approximately 30 hours if the pushbutton is constantly pressed.
         My circuit is using two LEDs: a single red LED, using 20 mA of current, and an RGB LED, using an average of 20 mA of current, 
         for a total of 40 mA of current.
-
+        <br>
         Therefore, the battery life can be calculated as follows:
         <img src="fade-q2.png" width="700" height="450"/>
 
