--- a/a2.html
+++ b/a2.html
@@ -184,8 +184,10 @@
         3: Measure and record the actual voltage across one of your LEDs when it's on. 
         How does this compare to the theoretical forward voltage for your LED color?
         <br>
+        <br>
         The actual voltage across my single red LED when it's on is approximately 2.02V, as measured with a multimeter.
         This is very close to the theoretical forward voltage for a red LED, which is typically about 1.8V.
+        <img src="fade-q3.jpg" width="500" height="250"/>
         <br>
         <br>
         4: Did you use AI tools in completing this assignment? 
