--- a/a2.html
+++ b/a2.html
@@ -194,7 +194,7 @@
         If yes, please provide details on how/when, as well as a brief reflection. 
         If no, you can either leave this question blank, or provide other information if you'd like.
         <br>
-        Answer
+        No, I did not use AI tools in completing this assignment. 
       </p>
 
     </div>
