--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
       <div class="assignment">
         <a href="a2.html">
           <h2>Assignment 2: Fade!</h2>
-          <img src="red-panda.jpg" />
+          <img src="fade-circuit.jpg" />
         </a>
         <p>Assignment 2 was Fade!</p>
       </div>
