--- a/a2.html
+++ b/a2.html
@@ -31,7 +31,7 @@
       I used 220 ohm resistors for the red and green LEDs and a 100 ohm resistor for the blue LED.
       <br>
       <br>
-      For the pushbutton, I used a 10K ohm resistor because it ensures that the pin has a stable voltage when the button is not pressed, 
+      For the pushbutton, I used a 10K ohm resistor because it ensures that the input pin has a stable voltage when the button is not pressed, 
       and also limits the current to a safe level when the button is pressed.
       <br>
       <br>
