--- a/a3.html
+++ b/a3.html
@@ -33,82 +33,14 @@
       <br>
 
       <h2>My Circuit</h2>
-      <img src="fade-circuit.jpg" width="440" height="550"/>
+      <img src="a3-circuit.jpeg" width="440" height="550"/>
       Image of my physical circuit, "Fade", with all components connected.
       <br>
       <br>
 
       <h2>My Firmware - EDIT COMMENTS</h2>
         <pre><code>
-            /*
-            Analog Input
-
-            Demonstrates analog input by reading an analog sensor on analog pin 0 and
-            turning on and off a light emitting diode(LED) connected to digital pin 13.
-            The amount of time the LED will be on and off depends on the value obtained
-            by analogRead().
-
-            The circuit:
-            - potentiometer
-                center pin of the potentiometer to the analog input 0
-                one side pin (either one) to ground
-                the other side pin to +5V
-            - LED
-                anode (long leg) attached to digital output 13 through 220 ohm resistor
-                cathode (short leg) attached to ground
-
-            - Note: because most Arduinos have a built-in LED attached to pin 13 on the
-                board, the LED is optional.
-
-            created by David Cuartielles
-            modified 30 Aug 2011
-            By Tom Igoe
-
-            This example code is in the public domain.
-
-            https://docs.arduino.cc/built-in-examples/analog/AnalogInput/
-            */
-
-            int sensorPin = A0;   // select the input pin for the potentiometer
-            int ledPin = 13;      // select the pin for the LED
-            int sensorValue = 0;  // variable to store the value coming from the sensor
-
-            int ledB = 10; // simple red LED
-
-            void setup() {
-            // declare the ledPin as an OUTPUT:
-            pinMode(ledPin, OUTPUT);
-
-            pinMode(ledB, OUTPUT);
-
-            Serial.begin(9600);
-            }
-
-            void loop() {
-            // read the value from the sensor:
-            sensorValue = analogRead(sensorPin);
-
-            if (sensorValue <= 100){
-                Serial.println(sensorValue);
-
-                analogWrite(ledB, 0);
-
-                // turn the ledPin on
-                digitalWrite(ledPin, HIGH);
-                // stop the program for <sensorValue> milliseconds:
-                delay(sensorValue);
-                // turn the ledPin off:
-                digitalWrite(ledPin, LOW);
-                // stop the program for <sensorValue> milliseconds:
-                delay(sensorValue);
-            } else {
-                digitalWrite(ledPin, LOW);
-                analogWrite(ledB, 255);
-            }
             
-            }
-
-
         </code>
         </pre>
       <br>
