--- a/a3.html
+++ b/a3.html
@@ -34,7 +34,7 @@
 
       <h2>My Circuit</h2>
       <img src="a3-circuit.jpeg" width="440" height="550"/>
-      Image of my physical circuit, "Fade", with all components connected.
+      Image of my physical circuit, "Input Output", with all components connected.
       <br>
       <br>
 
@@ -51,6 +51,15 @@
       Your browser does not support the video tag.
       </video>
       Video of my circuit in operation, with a fading RGB LED, red LED, and pushbutton.
+      <br>
+      <br>
+
+      <h2>My Circuit's Serial Monitor</h2>
+      <video controls width="600" height="450">
+        <source src="a3-serial-monitor.mp4" type="video/mp4">
+      Your browser does not support the video tag.
+      </video>
+      Video of an example output from the serial monitor.
       <br>
       <br>
 
