--- a/a3.html
+++ b/a3.html
@@ -47,10 +47,10 @@
 
       <h2>My Circuit's Operation</h2>
       <video controls width="600" height="350">
-        <source src="fade-video.mp4" type="video/mp4">
+        <source src="a3-circuit-video.mp4" type="video/mp4">
       Your browser does not support the video tag.
       </video>
-      Video of my circuit in operation, with a fading RGB LED, red LED, and pushbutton.
+      Video of my circuit in operation, with a potentiometer, red LED, and blue LED.
       <br>
       <br>
 
