--- a/a3.html
+++ b/a3.html
@@ -38,7 +38,7 @@
       <br>
       <br>
 
-      <h2>My Firmware - EDIT COMMENTS</h2>
+      <h2>My Firmware</h2>
         <pre><code>
             /*
               Analog Input
