--- a/a3.html
+++ b/a3.html
@@ -20,8 +20,8 @@
     </div>
     <div class="content">
       <h2>My Schematic</h2>
-      <img src="fade-schematic.png" width="600" height="350"/>
-      Image of my schematic with labeled components, including pins, resistors, LEDs, pushbuttons,and ground.
+      <img src="a3-schematic.jpg" width="600" height="350"/>
+      Image of my schematic with labeled components, including pins, resistors, LEDs, potentiometer, and ground.
       <br>
       <br>
 
