--- a/a3.html
+++ b/a3.html
@@ -26,9 +26,9 @@
       <br>
 
       <h2>Resistance Calculation</h2>
-      <img src="fade-resistance-calculations.png" width="800" height="350"/>
-      Image of my calculations for the resistance needed for my circuit.
-      I used 220 ohm resistors for the red and green LEDs and a 100 ohm resistor for the blue LED.
+      <img src="a3-resistance-calculations.jpg" width="800" height="350"/>
+      Image of my calculations for the resistances needed for my circuit.
+      I used a 220 ohm resistor for the red LED, a 100 ohm resistor for the blue LED, and a 10k ohm resistor for the potentiometer.
       <br>
       <br>
 
