--- a/a3.html
+++ b/a3.html
@@ -220,7 +220,23 @@
         Justify your answer with example calculations.
         <br>
         <br>
-        Answer
+        In my voltage divider, the variable resistor can be either R1 (the top resistor) or R2 (the bottom resistor). 
+        However, its position will determine how the output voltage (Vout) changes as the amount of light is adjusted.
+        <br>
+        <br>
+        When the light sensor is used as R1 (top), the Vout changes from about 4.35V to 2.56V. 
+        Increasing the amount of light causes Vout to increase because the top resistor is dropping less voltage, 
+        and therefore, more voltage is available across the fixed bottom resistor.
+        <br>
+        <br>  
+        When the light sensor is used as R2 (bottom), the Vout changes from about 0.65V to 2.44V. 
+        Increasing the amount of light reduces the sensor’s resistance, 
+        meaning less voltage moves across it, so Vout decreases.
+        <br>
+        <br>
+        Therefore, either configuration works, but the voltage range and the direction it changes is different. 
+        It just depends on whether you want the voltage output to increase or decrease with brightness.
+        In other words, whether the LED should turn on or off in response to light.
         <br>
         <br>
         2: Draw a graph where the x-axis is time and the y-axis is voltage. 
