photos of calculations

--- a/a3.html
+++ b/a3.html
@@ -225,8 +225,8 @@
         <br>
         <br>
         When the light sensor is used as R1 (top), the Vout changes from about 4.35V to 2.56V. 
-        Increasing the amount of light causes Vout to increase because the top resistor is dropping less voltage, 
-        and therefore, more voltage is available across the fixed bottom resistor.
+        Increasing the amount of light causes Vout to increase because the top resistor is dropping less voltage 
+        and more voltage is available to move across the fixed bottom resistor.
         <br>
         <br>  
         When the light sensor is used as R2 (bottom), the Vout changes from about 0.65V to 2.44V. 
@@ -235,10 +235,16 @@
         <br>
         <br>
         Therefore, either configuration works, but the voltage range and the direction it changes is different. 
-        It just depends on whether you want the voltage output to increase or decrease with brightness.
+        It just depends on whether you want the output voltage to increase or decrease with brightness.
         In other words, whether the LED should turn on or off in response to light.
         <br>
         <br>
+        <img src="a3-q1.jpg" width="440" height="550"/>
+        <img src="a3-q1-2.jpg" width="440" height="550"/>
+        Image of my voltage divider example calculations.
+        <br>
+        <br>
+
         2: Draw a graph where the x-axis is time and the y-axis is voltage. 
         Plot the voltage at V-measure of your voltage divider of your shared gif.
         <br>
