--- a/a3.html
+++ b/a3.html
@@ -239,8 +239,9 @@
         In other words, whether the LED should turn on or off in response to light.
         <br>
         <br>
-        <img src="a3-q1.jpg" width="650" height="350"/>
-        <img src="a3-q1-2.jpg" width="650" height="350"/>
+        <img src="a3-q1.jpg" width="650" height="250"/>
+        Image of my voltage divider example calculations.
+        <img src="a3-q1-2.jpg" width="650" height="250"/>
         Image of my voltage divider example calculations.
         <br>
         <br>
