--- a/a3.html
+++ b/a3.html
@@ -240,9 +240,9 @@
         <br>
         <br>
         <img src="a3-q1.jpg" width="650" height="450"/>
-        Image of my voltage divider example calculations.
+        Image of my voltage divider example calculations for R1 as the variable resistor.
         <img src="a3-q1-2.jpg" width="650" height="450"/>
-        Image of my voltage divider example calculations.
+        Image of my voltage divider example calculations for R2 as the variable resistor.
         <br>
         <br>
 
