--- a/a3.html
+++ b/a3.html
@@ -270,7 +270,12 @@
         If no, you can either leave this question blank, or provide other information if you'd like.
         <br>
         <br>
-        Answer 
+        Yes, I used ChatGPT to help me understand what question 2 was asking me to graph.
+        I initially misunderstood the question and thought it was asking for a graph of the circuit's operation-- 
+        the turning on and off of the red and blue LEDs. I prompted ChatGPT with my misunderstanding 
+        and asked what it means to "plot the voltage at V-measure" in a voltage divider. It instructed me that
+        I needed to graph the voltage output of the voltage divider over time, which clarified the question for me.
+        I then created my graph using relevant values of my circuit, particularly the voltage divider calculations I completed for question 1. 
       </p>
 
     </div>
