--- a/a3.html
+++ b/a3.html
@@ -275,7 +275,7 @@
         the turning on and off of the red and blue LEDs. I prompted ChatGPT with my misunderstanding 
         and asked what it means to "plot the voltage at V-measure" in a voltage divider. It instructed me that
         I needed to graph the voltage output of the voltage divider over time, which clarified the question for me.
-        I then created my graph using relevant values of my circuit, particularly the voltage divider calculations I completed for question 1. 
+        I then used the voltage divider calculations I completed in question 1 to create the graph on my own. 
       </p>
 
     </div>
