--- a/a3.html
+++ b/a3.html
@@ -262,7 +262,7 @@
         it would change the ranges I map. Right now the analogWrite Pulse Width Modulation’s (PWM) range is 0-255 (2^8), 
         but a 10-bit PWM would be 2^10, resulting in a new analogWrite range of 0-1023.
         As for analogRead, it currently uses a 10-bit analog digital converter with a range of 0-1023. 
-        If I had a 16-bit analog digital converter instead, the range would be 0-65,535 (2^16).
+        If I had a 16-bit analog digital converter, the range would be 0-65,535 (2^16) instead.
         <br>
         <br>
         4: Did you use AI tools in completing this assignment? 
