--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
       <div class="assignment">
         <a href="a3.html">
           <h2>Assignment 3: Input Output!</h2>
-          <img src="red-panda.jpg" />
+          <img src="a3-circuit.jpeg" />
         </a>
         <p>Assignment 3 was Input Output!</p>
       </div>
