--- a/index.html
+++ b/index.html
@@ -46,5 +46,32 @@
         <p>Assignment 3 was Input Output!</p>
       </div>
     </div>
+
+    <div class="grid">
+      <div class="assignment">
+        <a href="a4.html">
+          <h2>Assignment 4: Libraries!</h2>
+          <img src="blink-photo.jpeg" />
+        </a>
+        <p>Assignment 4 was Libraries!</p>
+      </div>
+
+      <div class="assignment">
+        <a href="a2.html">
+          <h2>Assignment 5: High(er) voltage and transistors!</h2>
+          <img src="fade-circuit.jpg" />
+        </a>
+        <p>Assignment 5 was High(er) voltage and transistors!</p>
+      </div>
+
+      <div class="assignment">
+        <a href="a3.html">
+          <h2>Assignment 6: Talking to the web!</h2>
+          <img src="a3-circuit.jpeg" />
+        </a>
+        <p>Assignment 6 was Talking to the web!</p>
+      </div>
+    </div>
+
   </body>
 </html>
