--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     <div class="grid">
       <div class="assignment">
         <a href="a1.html">
-          <h2>Assignment 1: Blink!</h2>
+          <h2>A1: Blink!</h2>
           <img src="blink-photo.jpeg" />
         </a>
         <p>Assignment 1 was Blink!</p>
@@ -32,7 +32,7 @@
 
       <div class="assignment">
         <a href="a2.html">
-          <h2>Assignment 2: Fade!</h2>
+          <h2>A2: Fade!</h2>
           <img src="fade-circuit.jpg" />
         </a>
         <p>Assignment 2 was Fade!</p>
@@ -40,7 +40,7 @@
 
       <div class="assignment">
         <a href="a3.html">
-          <h2>Assignment 3: Input Output!</h2>
+          <h2>A3: Input Output!</h2>
           <img src="a3-circuit.jpeg" />
         </a>
         <p>Assignment 3 was Input Output!</p>
@@ -50,7 +50,7 @@
     <div class="grid">
       <div class="assignment">
         <a href="a4.html">
-          <h2>Assignment 4: Libraries!</h2>
+          <h2>A4: Libraries!</h2>
           <img src="blink-photo.jpeg" />
         </a>
         <p>Assignment 4 was Libraries!</p>
@@ -58,7 +58,7 @@
 
       <div class="assignment">
         <a href="a2.html">
-          <h2>Assignment 5: High(er) voltage and transistors!</h2>
+          <h2>A5: High(er) voltage and transistors!</h2>
           <img src="fade-circuit.jpg" />
         </a>
         <p>Assignment 5 was High(er) voltage and transistors!</p>
@@ -66,7 +66,7 @@
 
       <div class="assignment">
         <a href="a3.html">
-          <h2>Assignment 6: Talking to the web!</h2>
+          <h2>A6: Talking to the web!</h2>
           <img src="a3-circuit.jpeg" />
         </a>
         <p>Assignment 6 was Talking to the web!</p>
