--- a/a4.html
+++ b/a4.html
@@ -40,7 +40,92 @@
 
       <h2>My Firmware</h2>
         <pre><code>
+          
+        #include <CapacitiveSensor.h>
+        #include <Servo.h>
+
+        /*
+        * CapitiveSense Library Demo Sketch
+        * Paul Badger 2008
+        * Uses a high value resistor e.g. 10M between send pin and receive pin
+        * Resistor effects sensitivity, experiment with values, 50K - 50M. Larger resistor values yield larger sensor values.
+        * Receive pin is the sensor pin - try different amounts of foil/metal on this pin
+        */
+
+        /* Sweep
+        by BARRAGAN <http://barraganstudio.com>
+        This example code is in the public domain.
+
+        modified 8 Nov 2013
+        by Scott Fitzgerald
+        https://www.arduino.cc/en/Tutorial/LibraryExamples/Sweep
+        */
+
+        CapacitiveSensor   cs_4_2 = CapacitiveSensor(4,2);        // 1M resistor between pins 4 & 2, pin 2 is sensor pin, add a wire and or foil if desired
+        CapacitiveSensor   cs_4_6 = CapacitiveSensor(4,6);        // 1M resistor between pins 4 & 6, pin 6 is sensor pin, add a wire and or foil
+        CapacitiveSensor   cs_4_8 = CapacitiveSensor(4,8);        // 1M resistor between pins 4 & 8, pin 8 is sensor pin, add a wire and or foil
+
+        Servo myservo;  // create Servo object to control a servo
+
+        int pos = 90;       // variable to store current servo position
+        long thresh = 60;   // threshhold value: minimum capacitive reading that counts as a touch
+
+
+        void setup() {
+            // turn off autocalibrate on all sensors
+            cs_4_2.set_CS_AutocaL_Millis(0xFFFFFFFF);     
+            cs_4_6.set_CS_AutocaL_Millis(0xFFFFFFFF);
+            cs_4_8.set_CS_AutocaL_Millis(0xFFFFFFFF);
+
+            Serial.begin(9600);     // start the Serial Monitor for debugging output
+
+            myservo.attach(9);      // attaches the servo on pin 9 to the Servo object
+            myservo.write(pos);     // move the servo to its initial position of 90 degrees
+        }
+
+        void loop() {
+            long start = millis();      // record current time (to measure sensor read duration)
+
+            // read capacitive sensor values (20 samples per pad)
+            long total1 =  cs_4_2.capacitiveSensor(20);     // read sensor on pin 2
+            long total2 =  cs_4_6.capacitiveSensor(20);     // read sensor on pin 6
+            long total3 =  cs_4_8.capacitiveSensor(20);     // read sensor on pin 8
+
+            Serial.print(millis() - start);        // check on performance in milliseconds
+            Serial.print("\t");                    // tab character for debug windown spacing
+
+            Serial.print(total1);                  // print sensor output 1
+            Serial.print("\t");
+            Serial.print(total2);                  // print sensor output 2
+            Serial.print("\t");
+            Serial.println(total3);                // print sensor output 3
+
+            delay(10);                             // arbitrary delay to limit data to serial port 
+
+            // store all readings and corresponding servo angles in arrays
+            long totals[3] = { total1, total2, total3 };    // sensor readings
+            int angles[3] = { 0, 90, 180 };                 // servo angles for each sensor
+
+            int newPos = pos;           // assume servo will stay where it is
+            long maxVal = thresh;       // initialize max value at threshold
             
+            // loop through each sensor to find which one is being touched most
+            for(int i = 0; i < 3; i++) {
+                if(totals[i] > maxVal) {    // if this sensor reading beats current max
+                    maxVal = totals[i];     // update max reading
+                    newPos = angles[i];     // store corresponding servo angle
+                }
+            }
+
+            // if servo position should change (new touch detected)
+            if (newPos != pos) {
+                pos = newPos;                       // update stored servo position
+                pos = constrain(pos, 0, 180);       // make sure position stays within valid range
+                myservo.write(pos);                 // move the servo to the new position
+                delay (80);                         // brief pause to let servo settle
+            }
+        }
+
         </code>
         </pre>
       <br>
