inputted circuit photo

--- a/a4.html
+++ b/a4.html
@@ -33,14 +33,14 @@
       <br>
 
       <h2>My Circuit</h2>
-      <img src="a3-circuit.jpeg" width="440" height="550"/>
-      Image of my physical circuit, "Input Output", with all components connected.
+      <img src="a4-circuit.jpg" width="440" height="550"/>
+      Image of my physical circuit, "Libraries", with all components connected.
       <br>
       <br>
 
       <h2>My Firmware</h2>
         <pre><code>
-          
+
         #include <CapacitiveSensor.h>
         #include <Servo.h>
 
