--- a/a4.html
+++ b/a4.html
@@ -132,10 +132,10 @@
 
       <h2>My Circuit's Operation</h2>
       <video controls width="600" height="350">
-        <source src="a3-circuit-video.mp4" type="video/mp4">
+        <source src="a4-circuit-video.mp4" type="video/mp4">
       Your browser does not support the video tag.
       </video>
-      Video of my circuit in operation, with a photoresistor, red LED, and blue LED.
+      Video of my circuit in operation, with capacitive touch inputs and a servo output.
       <br>
       <br>
 
