--- a/a4.html
+++ b/a4.html
@@ -25,10 +25,10 @@
       <br>
       <br>
 
-      <h2>Resistance Calculation</h2>
-      <img src="a3-resistance-calculations.jpg" width="800" height="550"/>
-      Image of my calculations for the resistances needed for my circuit.
-      I used a 220 ohm resistor for the red LED, a 100 ohm resistor for the blue LED, and a 10k ohm resistor for the photoresistor.
+      <h2>Resistance Values</h2>
+      I used 1M ohm resistors for the capacitive touch sensors because they provide low sensitivity, but fast response readings.
+      It works well for my circuit's operation since I want the servo to move quickly when a capacitive touch is detected,
+      without being too sensitive to false touches.
       <br>
       <br>
 
@@ -61,7 +61,7 @@
         https://www.arduino.cc/en/Tutorial/LibraryExamples/Sweep
         */
 
-        CapacitiveSensor   cs_4_2 = CapacitiveSensor(4,2);        // 1M resistor between pins 4 & 2, pin 2 is sensor pin, add a wire and or foil if desired
+        CapacitiveSensor   cs_4_2 = CapacitiveSensor(4,2);        // 1M resistor between pins 4 & 2, pin 2 is sensor pin, add a wire and or foil
         CapacitiveSensor   cs_4_6 = CapacitiveSensor(4,6);        // 1M resistor between pins 4 & 6, pin 6 is sensor pin, add a wire and or foil
         CapacitiveSensor   cs_4_8 = CapacitiveSensor(4,8);        // 1M resistor between pins 4 & 8, pin 8 is sensor pin, add a wire and or foil
 
