--- a/a4.html
+++ b/a4.html
@@ -20,8 +20,9 @@
     </div>
     <div class="content">
       <h2>My Schematic</h2>
-      <img src="a3-schematic.jpg" width="700" height="350"/>
-      Image of my schematic with labeled components, including pins, resistors, LEDs, photoresistor, and ground.
+      <img src="a4-schematic.jpg" width="700" height="350"/>
+      Image of my schematic with labeled components, including pins (send and receive), resistors, 
+      capacitive sensor wires, servo, power source, and ground.
       <br>
       <br>
 
