index page edit

--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
       <div class="assignment">
         <a href="a4.html">
           <h2>A4: Libraries!</h2>
-          <img src="blink-photo.jpeg" />
+          <img src="a4-circuit.jpg" />
         </a>
         <p>Assignment 4 was Libraries!</p>
       </div>
