--- a/a4.html
+++ b/a4.html
@@ -213,6 +213,7 @@
 
             // use the median value instead of a single noisy reading
             useValue(medianValue)
+        </code></pre>
         <br>
         <br>
 
