--- a/a4.html
+++ b/a4.html
@@ -156,7 +156,8 @@
         Draw a graph with the x-axis as time and the y-axis as voltage at pin 9 with respect to ground.
         <br>
         <br>
-        Answer.
+        <img src="a4-q1.jpg" width="500" height="300"/>
+        Image of graph showing voltage at pin 9 over time as the servo moves from 0 to 180 degrees.
         <br>
         <br>
 
@@ -197,16 +198,16 @@
         How can we address this? Answer in (pseudo)code.
         <br>
         <br>
-        We can find the median of multiple readings to reduce the effect of the noise
+        We can find the median of multiple readings to reduce the effect of the noise.
         <br>
         <br>
         Pseudo code example:
         <pre><code>
           loop: 
             // take multiple readings from the same sensor
-            r1 = readSensor()
-            r2 = readSensor()
-            r3 = readSensor()
+            r1 = readSensor();
+            r2 = readSensor();
+            r3 = readSensor();
 
             // find the middle value (the median)
             medianValue = median(r1, r2, r3)
