--- a/a4.html
+++ b/a4.html
@@ -160,6 +160,8 @@
         Image of graph showing voltage at pin 9 over time as the servo moves from 0 to 180 degrees.
         <br>
         <br>
+        <br>
+        <br>
 
         2: Your input device is slightly broken, leading it to give us an erroneous reading 1% of the time. 
         How can we address this? Answer in (pseudo)code.
@@ -192,6 +194,8 @@
         </code></pre>
         <br>
         <br>
+        <br>
+        <br>
 
         3: Your input device is slightly noisy, leading the measurement to randomly deviate 
         from the true measurement up or down by 10%. 
@@ -217,6 +221,8 @@
         </code></pre>
         <br>
         <br>
+        <br>
+        <br>
 
         4: Did you use AI tools in completing this assignment? 
         If yes, please provide details on how/when, as well as a brief reflection. 
@@ -229,8 +235,8 @@
         I originally had my threshold set way too high, which made it difficult to trigger the servo movement.
         ChatGPT suggested lowering the threshold value, which helped improve the responsiveness of my circuit, 
         but it also explained to me that if the sensor readings are too jumpy, I should consider increasing the threshold slightly.
-        Overall, using ChatGPT helped me understand how to choose appropriate threshold values for my preferred circuit behavior, 
-        learning the trade-offs between sensitivity and stability.
+        Overall, using ChatGPT helped me learn how to choose appropriate threshold values for my preferred circuit behavior, 
+        understanding the trade-offs between sensitivity and stability.
       </p>
 
     </div>
