--- a/projectproposal.html
+++ b/projectproposal.html
@@ -31,21 +31,33 @@
 
       <h2>Anticipated Bill of Materials</h2>
         Arduino Uno (for controlling the timer and LED color changes)
+        <br>
         Breadboard + wires (for wiring my circuit)
+        <br>
         RGB LEDs (for displaying different colors for focus/breaks)
+        <br>
         Push Button (for starting and resetting the timer)
+        <br>
         Resistors (220/100/10k) (for controlling current & voltage of RGB LED and push button)
+        <br>
         Translucent/frosted jar and container (for enclosing, diffusing, and hiding the components)
       <br>
       <br>
 
       <h2>Timeline</h2>
         1: Research ideal focus and break durations for studying to implement in timer
+        <br>
         2: Prototype LED color changes and button input on Arduino and breadboard
+        <br>
         3: Test full cycle transitions
-        4: Prototype translucent/frosted jar and container: mount LED, Arduino, and button inside the enclosure and test the level of diffusion
+        <br>
+        4: Prototype translucent/frosted jar and container: mount LED, Arduino, 
+        and button inside the enclosure and test the level of diffusion
+        <br>
         - Determine appropriate size of enclosure for components with cardboard prototype
+        <br>
         - Find final enclosure
+        <br>
         5: Final iterations, testing, and debugging to create final prototype!
 
       <br>
@@ -53,8 +65,11 @@
 
       <h2>Contingency Plans</h2>
         If something goes wrong with the timer code, I will simplify the operation to manually switching colors with the button.
+        <br>
         If the RGB LEDs are not working properly, I will use separate-single color LEDs for each phase.
+        <br>
         If the button input is glitching, I will debug or find a workaround in code or use a different input method.
+        <br>
         If something goes wrong with the jar and container, I will use a temporary disposable enclosure.
 
       <br>
